...
                android:singleLine="true" />

            <EditText
                android:id="@+id/anthropicBetaInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/anthropic_beta"
                android:inputType="text"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/googleProjectInput"
...
